# test_quadtree

./: CMakeLists.txt  Quadtree.h  Quadtree.h.gch  Quadtree_build_mex.cpp  Quadtree_nearest_neighbor_mex.cpp  README.txt  cachegrind.txt  cachegrind_before.txt  empty func  gmon.out  main_quadtree_build_test.m  quadtree_compile.m
20200219_stereoEdgeVO/: Untitled5.m  calcEpiPatch.m  calcEpiPatchTemplate.m  calcOverlapRatio.m  cross2d.m  drawValidPoints.m  fig_initial.fig  fig_temporal.fig  frameConstruct.m  idwMidPoints.m  imreadStereo.m  initializeWeightBin.m  loadStereoData.m  main.m  main_3drecon_using_truth.m  main_3drecon_using_truth_temporal.m  main_temporal_test.asv  main_temporal_test.m  project3to2.m  stereoDisparityStatic.asv  stereoDisparityStatic.m  stereoDisparityStaticWarped.m  stereoDisparityTemporal.m  stereoRectifyUndist.m  testBoundary.asv  testBoundary.m  test_depth_filter.m  triangulatePointsDLT.m  updateDF.m  updateInverseDepth.m  updateWeightBin.m  warpPts.m
20200219_stereoEdgeVO/euroc_tools/quaternion/: quat_to_dcm_kch.m
20200219_stereoEdgeVO/functions_mex/: CommonFunction.h  ObjectPool.h  QuadTreeFastMultiplePooled.h  QuadTreeFastPooled.h  calcZNCC.cpp  calcZNCC.mexw64  findSalientEdges.cpp  findSalientEdges.mexw64  interpImage.cpp  interpImage.mexw64  mex_io.h  mexbuild.m  objectpoolBuild.cpp  objectpoolBuild.mexw64  objectpoolDelete.cpp  objectpoolDelete.mexw64  quadtreeBuild.cpp  quadtreeBuild.mexw64  quadtreeCachedNN.cpp  quadtreeCachedNN.mexw64  quadtreeDelete.cpp  quadtreeDelete.mexw64  quadtreeNN.cpp  quadtreeNN.mexw64  quadtreemBuild.cpp  quadtreemBuild.mexw64  quadtreemCachedNN.cpp  quadtreemCachedNN.mexw64  quadtreemDelete.cpp  quadtreemDelete.mexw64  quadtreemNN.cpp  quadtreemNN.mexw64  timer_windows.h
20200219_stereoEdgeVO/functions_transform/: a2r.m  hat.m  q2r.m  r2a.m  r2q.m  se3Inv.m
include/: freelist.h  macro_quadtree_array.h  macros.h  macros2.h  quadtree2.h  quadtree3.h  quadtree_array.h  quadtree_fast.h  quadtree_fast2.h  simple_stack.h
include/quadtree/: macro_quadtree.h  object_pool.h  pointer_stack.h  quadtree_array.h  quadtree_array2.h  quadtree_array3.h  quadtree_pointer.h  quadtree_pointer2.h  simple_stack.h
legacy_mex_quadtree/: CommonStruct.h  QuadTreeFastPooled.h
src/: Quadtree.h  main.cpp  quadtree2.cpp  quadtree3.cpp  quadtree_array.cpp  quadtree_fast.cpp  quadtree_fast.h  quadtree_fast2.cpp  test_bit_interleave.cpp  test_bitcheck.cpp  test_bitshift.cpp  test_hash_based.cpp  test_main_quadtree2.cpp  test_main_quadtree3.cpp  test_main_quadtree_fast.cpp  test_max_depth.cpp  test_max_depth_array.cpp  test_max_depth_array2.cpp  test_max_depth_array3.cpp  test_max_depth_hash.cpp  test_max_depth_hash2.cpp  test_max_depth_pointer.cpp  test_max_depth_pointer2.cpp  test_max_depth_pointer_refactor.cpp  test_max_elem.cpp  test_moving_matching.cpp  timer.cpp  timer.h
src/octree/: octree.h
src/quadtree/: macro_quadtree.h  object_pool.h  quadtree_array.cpp  quadtree_array.h  quadtree_array2.cpp  quadtree_array2.h  quadtree_array3.cpp  quadtree_array3.h  quadtree_hash.cpp  quadtree_hash.h  quadtree_hash2.cpp  quadtree_hash2.h  quadtree_pointer.cpp  quadtree_pointer.h  quadtree_pointer2.cpp  quadtree_pointer2.h  quadtree_pointer_refactor.cpp  quadtree_pointer_refactor.h  simple_stack.h
